# owl_robot_description

./: CMakeLists.txt  package.xml
config/: urdf.rviz
launch/: rviz.launch
meshes/: base_link.STL  end_effector_link.STL  w2w3_link.STL
urdf/: robot.urdf  robot.xacro  robot_active.urdf
