<?xml version="1.0"?>
<package format="2">
  <name>owl_robot_description</name>
  <version>0.0.0</version>
  <description>The owl_robot_description package</description>
  <maintainer email="meher.d@orangewood.co">Meher</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export></export>
</package>
